; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_rebase.c_imply_interactive.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_rebase.c_imply_interactive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rebase_options = type { i32 }

@.str = private unnamed_addr constant [34 x i8] c"%s requires an interactive rebase\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rebase_options*, i8*)* @imply_interactive to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @imply_interactive(%struct.rebase_options* %0, i8* %1) #0 {
  %3 = alloca %struct.rebase_options*, align 8
  %4 = alloca i8*, align 8
  store %struct.rebase_options* %0, %struct.rebase_options** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.rebase_options*, %struct.rebase_options** %3, align 8
  %6 = getelementptr inbounds %struct.rebase_options, %struct.rebase_options* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  switch i32 %7, label %14 [
    i32 131, label %8
    i32 130, label %12
    i32 128, label %12
    i32 129, label %13
  ]

8:                                                ; preds = %2
  %9 = call i32 @_(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 @die(i32 %9, i8* %10)
  br label %17

12:                                               ; preds = %2, %2
  br label %17

13:                                               ; preds = %2
  br label %14

14:                                               ; preds = %2, %13
  %15 = load %struct.rebase_options*, %struct.rebase_options** %3, align 8
  %16 = getelementptr inbounds %struct.rebase_options, %struct.rebase_options* %15, i32 0, i32 0
  store i32 130, i32* %16, align 4
  br label %17

17:                                               ; preds = %14, %12, %8
  ret void
}

declare dso_local i32 @die(i32, i8*) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
